<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analyze</string>
    <string name="result">Result</string>
    <string name="empty_articles">Articles is Empty!</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="classification_result">Classification Result</string>
    <string name="classification_history">Classification History</string>
    <string name="related_articles">Related Articles</string>
    <string name="article_info">Article Info</string>
    <string name="retry">Retry</string>
    <string name="history">Classification History</string>
    <string name="history_deleted">History Deleted!</string>
    <string name="inference_time">Inference Time</string>
    <string name="history_is_empty">History is Empty!</string>
</resources>